--- a/Clinica-Grupo1/TPTallerProgra/pom.xml
+++ b/Clinica-Grupo1/TPTallerProgra/pom.xml
@@ -23,4 +23,12 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 </project>
