--- a/Clinica-Grupo1/TPTallerProgra/pom.xml
+++ b/Clinica-Grupo1/TPTallerProgra/pom.xml
@@ -5,6 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
+    <testSourceDirectory>src/testing</testSourceDirectory>
     <resources>
       <resource>
         <directory>src</directory>
@@ -32,3 +33,4 @@
     </dependency>
   </dependencies>
 </project>
+
