--- a/Clinica-Grupo1/TPTallerProgra/pom.xml
+++ b/Clinica-Grupo1/TPTallerProgra/pom.xml
@@ -33,7 +33,7 @@
     </dependency>
       <dependency>
           <groupId>org.mockito</groupId>
-          <artifactId>mockito-core</artifactId>
+          <artifactId>mockito-inline</artifactId>
           <version>4.0.0</version>
       </dependency>
   </dependencies>
